<resources>
    <string name="app_name">FunMap</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_event">Events</string>
    <string name="drawer_menu_gallery">Gallery</string>
    <string name="drawer_menu_message">Message</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_git">GitHub Repo</string>
    <string name="drawer_menu_author">Author</string>
    <string name="et_search">Search</string>
    <string name="tv_discover">Discover Nearby</string>
    <string name="activity_permission_location_denied">Can\'t get current location! Permission Denied!</string>
    <string name="slide">Discover Nearby!</string>
    <string name="hide">Hide</string>
    <string name="btn_picture">Picture</string>
    <string name="btn_event">Event</string>
</resources>
